// 放置ボーナスマスター取得リクエスト
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/idleBonus";

message IdleBonusGetMasterRequest {
  string user_id = 1;
  int64 master_idle_bonus_id = 2;
}
