// 放置ボーナスマスター取得レスポンス
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/idleBonus";

import "master_idle_bonus_structure.proto";
import "master_idle_bonus_event_structure.proto";
import "master_idle_bonus_item_structure.proto";
import "master_idle_bonus_schedule_structure.proto";

message IdleBonusGetMasterResponse {
  optional MasterIdleBonus master_idle_bonus = 1;
  optional MasterIdleBonusEvent master_idle_bonus_event = 2;
  repeated MasterIdleBonusItem master_idle_bonus_items = 3;
  repeated MasterIdleBonusSchedule master_idle_bonus_schedules = 4;
}
