// 放置ボーナスアイテム
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/idleBonus";

message MasterIdleBonusItem {
  int64 id = 1;
  int64 master_idle_bonus_schedule_id = 2;
  int64 master_item_id = 3;
  string name = 4;
  int32 count = 5;
}
