// 放置ボーナススケジュール
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/idleBonus";

message MasterIdleBonusSchedule {
  int64 id = 1;
  int64 master_idle_bonus_id = 2;
  int32 step = 3;
  string name = 4;
}
